base 2.0 with javascript

--- a/index.html
+++ b/index.html
@@ -40,15 +40,16 @@ rel="stylesheet">
                
     </header>
     <section class="acordion">
-    <button class="trigger">idiomas</button>
-
+        <div id="insert-here">
+    <button onclick="switchMode()" class="trigger"> <span> idiomas </span> <img src="images/Group 482294.png" alt="arrow"></button>
+        </div>
     <div class="content">
        <ul>
           <li>português</li>
           <li>Inglês</li>
        </ul>
-    </div>
-</section>
+    </div >
+</section >
     </div>
     <script src="scripts.js"></script>
 </body>
