sudden update in javascript

--- a/index.html
+++ b/index.html
@@ -43,13 +43,9 @@ rel="stylesheet">
         <div id="insert-here">
     <button onclick="switchMode()" class="trigger"> <span> idiomas </span> <img src="images/Group 482294.png" alt="arrow"></button>
         </div>
-    <div class="content">
-       <ul>
-          <li>português</li>
-          <li>Inglês</li>
-       </ul>
-    </div >
+   
 </section >
+    <img  class="logo"  src="images/logo-teuzo-dev.png" alt="logo-teuzo-dev">
     </div>
     <script src="scripts.js"></script>
 </body>
