close to the end

--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@ rel="stylesheet">
     </header>
     <section class="acordion">
         <div id="insert-here">
-    <button onclick="switchMode()" class="trigger"> <span> idiomas </span> <img src="images/Group 482294.png" alt="arrow"></button>
+    <button onclick="switchMode()" class="trigger"> <span> skills </span> <img src="images/Group 482294.png" alt="arrow"></button>
         </div>
         <div id="insert-edu">
 
         </div>
+        
 </section >
-    <img  class="logo"  src="images/logo-teuzo-dev.png" alt="logo-teuzo-dev">
+    <img  class="logo"  src="images/logo-teuzo-dev.png" alt="logo-teuzo-dev" >
     </div>
     <script src="scripts.js"></script>
 </body>
