--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@ rel="stylesheet">
         <div id="insert-edu">
 
         </div>
-        
+
+        <div id="insert-portfolio">
+           
+        </div>
+
 </section >
     <img  class="logo"  src="images/logo-teuzo-dev.png" alt="logo-teuzo-dev" >
     </div>
