--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ rel="stylesheet">
 </section >
     <img  class="logo"  src="images/logo-teuzo-dev.png" alt="logo-teuzo-dev" >
     </div>
-    <script src="scripts.js"></script>
+    <script src="javascript/scripts.js"></script>
+    <script src="javascript/education.js"></script>
+    <script src="javascript/portfolio.js"></script>
 </body>
 </html>
